exports[`TableItem show a row with active item 1`] = `
<tr>
  <td>
    <input
      data-checkbox-toggle="items-table"
      type="checkbox" />
  </td>
  <td>
    1
  </td>
  <td>
    Ativo
  </td>
  <td>
    <a
      className="ls-ico-external"
      href="/items/1">
      Item 1
    </a>
  </td>
  <td>
    Items
  </td>
  <td>
    9.34
  </td>
  <td>
    35
  </td>
  <td
    className="ls-txt-right">
    <a
      className="ls-btn-default ls-display-none"
      href="#">
      Detalhes
    </a>
    <button
      className="ls-btn">
      <span
        className="ls-ico-list" />
    </button>
  </td>
</tr>
`;

exports[`TableItem show a row with inactive item 1`] = `
<tr>
  <td>
    <input
      data-checkbox-toggle="items-table"
      type="checkbox" />
  </td>
  <td>
    1
  </td>
  <td>
    Inativo
  </td>
  <td>
    <a
      className="ls-ico-external"
      href="/items/1">
      Item 1
    </a>
  </td>
  <td>
    Items
  </td>
  <td>
    9.34
  </td>
  <td>
    35
  </td>
  <td
    className="ls-txt-right">
    <a
      className="ls-btn-default ls-display-none"
      href="#">
      Detalhes
    </a>
    <button
      className="ls-btn">
      <span
        className="ls-ico-list" />
    </button>
  </td>
</tr>
`;
